# fctools-guest-agents

./: .gitignore  Cargo.toml  LICENSE  README.md
grpc-guest-agent/: Cargo.toml  build.rs  guest_agent.proto
grpc-guest-agent/src/: main.rs  transport.rs
http-guest-agent/: Cargo.toml
http-guest-agent/src/: main.rs
