[package]
name = "http-guest-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-vsock = { workspace = true }
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
tower-service = "0.3.3"
hyper-util = { version = "0.1.10", default-features = false, features = [
    "tokio",
] }
